--- a/filmoff/src/App.module.css
+++ b/filmoff/src/App.module.css
@@ -15,20 +15,20 @@
 
 .footer::before,
 .footer::after {
-  content: "";
+  content: '';
   position: absolute;
   bottom: 0;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   z-index: -1;
 }
 
 .footer::before {
-  left: -100%;
+  left: 0;
   background: #8524a7;
 }
 
 .footer::after {
-  right: -100%;
+  right: 0;
   background: #8524a7;
 }
