--- a/filmoff/src/components/Footer/Footer.module.css
+++ b/filmoff/src/components/Footer/Footer.module.css
@@ -5,7 +5,7 @@
 
 .list_footerLg {
   @apply flex flex-col justify-center items-center font-normal text-base gap-2;
-  font-family: "Roboto";
+  font-family: 'Roboto';
   list-style-type: none;
 }
 
