--- a/filmoff/src/pages/styles/HomePage.module.css
+++ b/filmoff/src/pages/styles/HomePage.module.css
@@ -6,11 +6,11 @@
   @apply w-[200px] h-[200px];
 
   background-size: cover;
-  background-image: url("../../../public/img/SpinnerF5.gif");
+  background-image: url('../../../public/img/SpinnerF5.gif');
 }
 
 .header {
   @apply text-white text-2xl mt-5;
-  font-family: "Roboto";
+  font-family: 'Roboto';
   font-weight: 600;
 }
