--- a/filmoff/src/components/CardFilm/CardFilm.module.css
+++ b/filmoff/src/components/CardFilm/CardFilm.module.css
@@ -33,7 +33,7 @@
 }
 
 .moviedescription {
-  font-family: "Roboto";
+  font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -73,38 +73,34 @@
 }
 
 .movieImdbRating {
-  background-image: url("../../../public/img/yellowStar.svg");
+  background-image: url('../../../public/img/yellowStar.svg');
   background-size: 100%;
   background-image: cover;
   height: 44px;
   width: 44px;
   display: inline-block;
   margin-right: 4px;
-  font-family: "Roboto";
+  font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
   @apply flex items-center justify-center;
 }
 
 .movieUserRating {
-  background-image: url("../../../public/img/purpleStar.svg");
+  background-image: url('../../../public/img/purpleStar.svg');
   background-size: 100%;
   height: 44px;
   width: 44px;
   display: inline-block;
 
-  font-family: "Roboto";
+  font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
   @apply flex items-center justify-center;
 }
 
-.movieUserRating:hover {
-  filter: brightness(300%);
-}
-
 .movietitle {
-  font-family: "Roboto";
+  font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
   font-size: 20px;
@@ -138,7 +134,7 @@
 }
 
 .save {
-  background-image: url("../../../public/img/clickToSave.svg");
+  background-image: url('../../../public/img/clickToSave.svg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -148,7 +144,7 @@
 }
 
 .unsave {
-  background-image: url("../../../public/img/clickToUnsave.svg");
+  background-image: url('../../../public/img/clickToUnsave.svg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -168,5 +164,5 @@
   @apply w-[200px] h-[200px];
 
   background-size: cover;
-  background-image: url("../../../public/img/Spinner.svg");
+  background-image: url('../../../public/img/Spinner.svg');
 }
