--- a/filmoff/src/components/Footer/Footer.module.css
+++ b/filmoff/src/components/Footer/Footer.module.css
@@ -6,6 +6,7 @@
 .list_footerLg {
   @apply flex flex-col justify-center items-center font-normal text-base gap-2;
   font-family: 'Roboto';
+  font-weight: 500;
   list-style-type: none;
 }
 
@@ -14,5 +15,13 @@
 }
 
 .button {
-  @apply w-16 text-gray-400 hover:text-body_bg;
+  @apply w-16 hover:text-gray-400 text-white;
+}
+
+.pYear {
+  @apply text-sm;
+}
+
+.pInfo {
+  @apply text-xs;
 }
