--- a/filmoff/src/components/Login/Login.module.css
+++ b/filmoff/src/components/Login/Login.module.css
@@ -1,11 +1,11 @@
 .form {
-  @apply bg-gray-500 p-6 w-[100%] rounded-xl max-w-[400px] mt-10;
+  @apply bg-gray-500 p-6 w-[100%] rounded-xl max-w-[400px] mt-10 text-xl;
   border: 3px #8524a7 solid;
   font-family: 'Roboto', sans-serif;
 }
 
 .formBox {
-  @apply flex flex-col gap-5 justify-center;
+  @apply flex flex-col gap-6 justify-center;
 }
 
 .userInfo {
@@ -17,12 +17,16 @@
 }
 
 .input {
-  @apply w-[100%] rounded-lg h-10 px-5 py-2 text-black;
+  @apply w-[100%] rounded-lg h-12 px-5 py-2 text-black;
   border: 3px #8524a7 solid;
 }
 
+.buttonDiv {
+  @apply flex justify-center items-center;
+}
+
 .button {
-  @apply w-[100%] my-1 rounded-2xl border-0 text-white cursor-pointer h-12 text-lg hover:scale-105;
+  @apply w-[100%] my-2 rounded-2xl border-0 text-white cursor-pointer h-12 text-lg hover:scale-105;
   font-family: 'Roboto', sans-serif;
   background: linear-gradient(90deg, #672280 1.18%, #a626d3 100%);
 }
