--- a/filmoff/src/components/MyContent/MyContent.module.css
+++ b/filmoff/src/components/MyContent/MyContent.module.css
@@ -1,20 +1,35 @@
 .page {
-  @apply mt-8 px-2 phone:text-xl text-lg text-white flex flex-col justify-center items-center;
+  @apply mt-10 px-2 phone:text-xl text-lg text-white flex flex-col justify-center items-center;
   font-family: 'Roboto';
+  font-weight: 500;
+}
+
+.buttonTable {
+  @apply w-40 mt-10 my-5 rounded-2xl border-0 text-white cursor-pointer h-14 text-lg hover:scale-105 flex justify-center items-center;
+  font-family: 'Roboto', sans-serif;
+  background: linear-gradient(90deg, #672280 1.18%, #a626d3 100%);
+}
+
+.buttonTable:focus {
+  outline: none;
+}
+
+.buttonTable:active {
+  box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
 }
 
 .header {
-  @apply text-2xl;
+  @apply text-3xl;
 }
 
 .mainWatched {
-  @apply bg-gray-500 p-6  rounded-xl max-w-[1000px] mt-10;
+  @apply bg-gray-500 p-5  rounded-xl max-w-[1200px] mt-5;
   border: 3px #8524a7 solid;
   font-family: 'Roboto', sans-serif;
 }
 
 .headerBlock {
-  @apply text-xl;
+  @apply text-2xl flex justify-center gap-3;
 }
 
 .bodyWatched {
@@ -22,17 +37,47 @@
 }
 
 .tableWatched {
-  @apply mt-9 flex justify-center items-start gap-6 flex-wrap w-full;
+  @apply mt-9 flex justify-center items-start flex-wrap w-full;
 }
 
 .mainVote {
-  @apply bg-gray-500 p-6  rounded-xl max-w-[1000px] mt-10;
+  @apply bg-gray-500 p-6  rounded-xl max-w-[1000px] mt-14;
   border: 3px #8524a7 solid;
   font-family: 'Roboto', sans-serif;
 }
 
-.headerBlock {
-  @apply text-xl;
+.filterUp {
+  background-image: url('../../../public/img/arrowFilterUp.svg');
+  cursor: pointer;
+  background-size: 100%;
+  height: 36px;
+  width: 36px;
+  display: inline-block;
+
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+}
+
+.filterUp:hover {
+  filter: brightness(300%);
+}
+
+.filterDown:hover {
+  filter: brightness(300%);
+}
+
+.filterDown {
+  background-image: url('../../../public/img/arrowFilterDown.svg');
+  cursor: pointer;
+  background-size: 100%;
+  height: 36px;
+  width: 36px;
+  display: inline-block;
+
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
 }
 
 .bodyVote {
@@ -41,4 +86,19 @@
 
 .tableVote {
   @apply mt-9 flex flex-col justify-center items-start gap-6 flex-wrap w-full;
+}
+
+.none {
+  @apply text-2xl mt-10;
+}
+
+.loader {
+  @apply flex justify-center items-center;
+}
+
+.loaderimg {
+  @apply w-[200px] h-[200px];
+
+  background-size: cover;
+  background-image: url('../../../public/img/SpinnerF5.gif');
 }
