--- a/filmoff/src/components/Registration/Registration.module.css
+++ b/filmoff/src/components/Registration/Registration.module.css
@@ -1,11 +1,11 @@
 .form {
-  @apply bg-gray-500 p-6 w-[100%] rounded-xl max-w-[400px] mt-10;
+  @apply bg-gray-500 p-6 w-[100%] rounded-xl max-w-[400px] mt-10 text-xl;
   border: 3px #8524a7 solid;
   font-family: 'Roboto', sans-serif;
 }
 
 .formBox {
-  @apply flex flex-col gap-5 justify-center;
+  @apply flex flex-col gap-6 justify-center;
 }
 
 .userInfo {
@@ -17,12 +17,45 @@
 }
 
 .input {
-  @apply w-[100%] rounded-lg h-10 px-5 py-2 text-black;
+  @apply w-[100%] rounded-lg h-12 px-5 py-2 text-black;
   border: 3px #8524a7 solid;
 }
 
+.mailCheck {
+  @apply flex justify-start items-center;
+}
+
+.labelCheckBox {
+  @apply phone:text-base text-sm max-w-[270px];
+}
+.checkbox {
+  /* убираем стили */
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+
+  min-width: 36px;
+  height: 36px;
+  margin-right: 8px;
+  border-radius: 2px;
+
+  background-color: #fff;
+  background-image: url('../../../public/img/checkBox.svg');
+  background-repeat: no-repeat;
+  background-position: center center;
+  border: 3px #8524a7 solid;
+
+  &:focus {
+    outline: none;
+    box-shadow: 0 0 0 2px #e2e8f0;
+  }
+  &:checked {
+    background-image: url('../../../public/img/checkBoxActive.svg');
+  }
+}
+
 .button {
-  @apply w-[100%] my-1 rounded-2xl border-0 text-white cursor-pointer h-12 text-lg hover:scale-105;
+  @apply w-[100%] my-2 rounded-2xl border-0 text-white cursor-pointer h-12 text-lg hover:scale-105;
   font-family: 'Roboto', sans-serif;
   background: linear-gradient(90deg, #672280 1.18%, #a626d3 100%);
 }
@@ -33,4 +66,8 @@
 
 .button:active {
   box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
+}
+
+.buttonDiv {
+  @apply flex justify-center items-center;
 }
