--- a/filmoff/src/components/CardFilm/CardFilm.module.css
+++ b/filmoff/src/components/CardFilm/CardFilm.module.css
@@ -1,5 +1,7 @@
 .moviecard {
-  @apply w-[264px] h-[352px] overflow-hidden relative;
+  @apply w-[264px] h-[352px] overflow-hidden relative hover:scale-105;
+  box-shadow: 0 0 14px rgba(0, 0, 0, 0.6);
+  border-radius: 12px;
 }
 
 .moviewrapper {
