--- a/filmoff/src/components/FilmDescription/FilmDescription.module.css
+++ b/filmoff/src/components/FilmDescription/FilmDescription.module.css
@@ -23,6 +23,7 @@
   @apply phone:w-64 w-52 rounded-lg;
   min-width: 150px;
   border: 3.5px #8524a7 solid;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
 }
 
 .imgSet {
@@ -30,32 +31,35 @@
 }
 
 .name {
-  @apply md:text-2xl  text-xl mb-3;
+  @apply phone:text-2xl  text-xl mb-3;
 }
 
 .header {
-  @apply text-lg;
+  @apply phone:text-xl text-lg;
 }
 
 .info {
-  @apply flex flex-col justify-start phone:gap-3 gap-2 bg-gray-500 rounded-lg p-3 sm:p-5;
+  @apply flex flex-col justify-start phone:gap-5 gap-3 bg-[#2A2A2D] rounded-lg px-5 py-2.5 sm:px-10 sm:py-5;
   border: 3px #8524a7 solid;
   transition: gap 0.3s ease;
   transition: padding 0.3s ease;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+  border-radius: 12px;
 }
 
 .infoLine {
-  @apply flex justify-start items-center phone:gap-20 gap-3;
+  @apply flex justify-start items-center phone:gap-16 md:gap-24 gap-5;
   transition: gap 0.3s ease;
 }
 
 .nameInfo {
-  @apply flex;
+  @apply flex text-gray-400;
   min-width: 125px;
 }
 
 .valInfo {
-  @apply flex max-w-[220px] phone:max-w-full;
+  @apply flex max-w-[300px] phone:max-w-full;
+  text-align: left;
 }
 
 .boxUser {
@@ -123,12 +127,8 @@
   @apply flex items-center justify-center;
 }
 
-.movieUserRatingEdit:hover {
-  filter: brightness(300%);
-}
-
 .inputstyles {
-  @apply text-black bg-gray-500 w-12 h-5;
+  @apply text-white bg-[#2A2A2D] w-12 h-5;
 }
 
 .func {
@@ -165,9 +165,11 @@
 }
 
 .textCommentBox {
-  @apply bg-gray-500 
+  @apply bg-[#2A2A2D]
   max-w-[800px] min-w-[200px] w-[fit] h-20 rounded-xl px-5 py-2;
   border: 3px #8524a7 solid;
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.6);
+  border-radius: 12px;
 }
 
 .buttonsGaps {
