--- a/filmoff/src/components/SavedVoteTable/SavedVoteTable.module.css
+++ b/filmoff/src/components/SavedVoteTable/SavedVoteTable.module.css
@@ -4,7 +4,7 @@
 }
 
 .moviecard {
-  @apply overflow-hidden relative hover:scale-105 hover:brightness-125;
+  @apply overflow-hidden relative hover:scale-105 hover:brightness-125 p-2;
 }
 
 .moviewrapper {
@@ -15,6 +15,8 @@
   position: relative;
   height: 100%;
   @apply w-[128px] h-[176px];
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+  border-radius: 12px;
 }
 
 .header {
@@ -72,10 +74,6 @@
   @apply flex items-center justify-center ml-10 sm:ml-14;
 }
 
-.movieUserRatingEdit:hover {
-  filter: brightness(300%);
-}
-
 .input {
-  @apply text-black bg-gray-500 w-12 h-5;
+  @apply text-white bg-[#2A2A2D] w-12 h-5;
 }
